tests/negative/semantic/array_push_type_mismatch/input.ci
void main() {
    int[] xs = [1];
    arrayPush(xs, "oops");
}
